Mon Jul 26 10:13:04 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:		Fix crash when debugging on SPARC

Mon Jul 26 09:31:39 BST 2004 (njh)
----------------------------------
  * libclamav/message.c:	Fix occasional crash when scanning
  	multipart within multipart e-mails

Sun Jul 25 12:52:07 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Fixed warning message when building on FreeBSD4.9
			Closed (small) memory leak
			Fix crash when the 1st remote service goes down
			Only use gethostbyname_r on LINUX for now
			Improved load balancing a bit

Fri Jul 23 00:40:18 CEST 2004 (tk)
----------------------------------
  * configure: yet another Solaris 9 fix

Thu Jul 22 21:23:57 CEST 2004 (tk)
----------------------------------
  * docs: update

Thu Jul 22 16:47:05 BST 2004 (njh)
----------------------------------
 * clamav-milter:	Up-issue

Thu Jul 22 12:13:56 BST 2004 (trog)
-----------------------------------
 * libclamav/chmunpack.c: bound memory usage; cleanups.

Thu Jul 22 10:17:01 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Use gethostbyname_r when available

Wed Jul 21 22:23:58 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Add mutex around gethostbyname

Wed Jul 21 23:18:51 CEST 2004 (tk)
----------------------------------
  * configure: test for gethostbyname_r

Wed Jul 21 20:45:49 CEST 2004 (tk)
----------------------------------
  * libclamav: pe: enhance UPX skew detection (aCaB)
  * configure: fix milter test on Solaris 9 (problem reported by
	       Fletcher Mattox <fletcher*cs.utexas.edu>)

Wed Jul 21 18:46:36 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Add a note about using sendmail -d0 to see if
	sendmail has been built with MILTER support
		Add sanity check to clamfi_connect()

Wed Jul 21 16:47:06 BST 2004 (trog)
-----------------------------------
  * libclamav/chmunpack.c: use fclose() to flush data
