@@ -1,3 +1,8 @@
+Mon Jul 26 14:24:24 BST 2004 (njh)
+----------------------------------
+  * clamav-milter:	%v in the template file handling is now replaced
+	only with the virus name, no "stream:" appears
+
 Mon Jul 26 10:13:04 BST 2004 (njh)
 ----------------------------------
   * libclamav/mbox.c:		Fix crash when debugging on SPARC
@@ -5,7 +10,7 @@ Mon Jul 26 10:13:04 BST 2004 (njh)
 Mon Jul 26 09:31:39 BST 2004 (njh)
 ----------------------------------
   * libclamav/message.c:	Fix occasional crash when scanning
-  	multipart within multipart e-mails
+	multipart within multipart e-mails
 
 Sun Jul 25 12:52:07 BST 2004 (njh)
 ----------------------------------
